# CABAD_Cmodel

./: CABAD_Cmodel.sln  CABAD_Cmodel.vcxproj  CABAD_Cmodel.vcxproj.filters  CMakeLists.txt  main.cpp
CNN_ON_FPGA_Cmodel/: Cmodel.cfg  cfg.hpp  common.cpp  common.hpp  main.cpp
CNN_ON_FPGA_Cmodel/pytorch-best-practice-master/: config.py  main.py
CNN_ON_FPGA_Cmodel/pytorch-best-practice-master/models/: AlexNet.py  __init__.py
Python/: config.py  main.py
Python/data/: dataset.py
Python/models/: BasicModule.py  PYNQ_net.py
src/: PE_tb.v  cabad.cpp  cabad.h  define.h  main.cpp  pe.v
